--- a/webpack/package.json
+++ b/webpack/package.json
@@ -3,13 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
-  "dependencies": {
-    "jquery": "^3.0.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "webpack": "^1.13.1"
-  },
   "devDependencies": {
+    "babel-preset-stage-1": "^6.5.0",
+    "react-hot-loader": "^1.3.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -21,7 +17,8 @@
     "imports-loader": "^0.6.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "babel-preset-stage-1": "^6.5.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
