--- a/react/package.json
+++ b/react/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
   },
   "keywords": [
     "react"
@@ -14,10 +15,11 @@
   "author": "tjq",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.23.1",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -25,6 +27,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
+    "moment": "^2.15.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0"
   }
