--- a/fetjqcnIndex/webindex/package.json
+++ b/fetjqcnIndex/webindex/package.json
@@ -12,6 +12,8 @@
     "vue": "^2.1.10"
   },
   "devDependencies": {
+    "ansi-html": "^0.0.7",
+    "ansi-regex": "^2.1.1",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -28,18 +30,20 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "html-entities": "^1.2.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "strip-ansi": "^3.0.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.3.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
